// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withBackgroundClass withBackgroundClass, render with bg-primary class 1`] = `
<div
  className="bg-primary"
>
  Awesome
</div>
`;

exports[`withBackgroundClass withBackgroundClass, render without backgroundColorClass 1`] = `
<div>
  Awesome
</div>
`;
